# myNixOS

./: .gitignore  .sops.yaml  LICENSE  README.md  cabal.project  compiler.cabal  compiler.hs  flake.nix  home.nix  package-lock.json  package.json  secrets.yaml  system.nix
.github/workflows/: push-to-master.yaml
contrib/: haskell.nix  localCompose.nix
graphics/: graphics.cabal  graphics.hs  julia.glsl
hardware/: desktop.nix  laptop.nix
home/: alacritty.nix  cli-tools.nix  communication.nix  discord.nix  display.nix  editor.nix  gui.nix  hyprland.nix  telegram.nix  tui.nix
home/display/: default.nix
home/gui/: default.nix  obs-studio.nix  waybar.nix
home/gui/defaults/: alacritty.nix  hyprland.nix
modules/home/: alacritty.nix  gui.nix  hyprland-gtk.nix  hyprland.nix  k8s-dev.nix  nvim.nix  tui.nix  waybar.nix
modules/home/gui/: alacritty.nix  hyprland.nix  waybar.nix
modules/system/: hyprland.nix  i18n.nix  mail-server.nix  matrix.nix  minecraft.nix  nix.nix
personal-page/: LICENSE  README.md  compiler.cabal  compiler.hs  main.html
system/: display.nix  displayServer.nix  docker.nix  gaming.nix  hyprland.nix  i18n.nix  k8s-dev.nix  network.nix  networking.nix  nix.nix  unfreeSoftware.nix  wireguard.nix
systems/: README.md
systems/desktop/: default.nix  hardware.nix
systems/dmitry-desktop/: default.nix
systems/dmitry-homeserver/: default.nix  hardware-configuration.nix
systems/dmitry-laptop/: default.nix
systems/homeserver/: default.nix  disk-config.nix  hardware.nix
systems/laptop/: default.nix
systems/server/: default.nix  hardware.nix
systems/server2/: default.nix  disk-config.nix  hardware.nix
templates/: main.html
