cabal-version:   3.0

name:            compiler
version:         0.1.0.0
author:          Kovalev Dmitry
maintainer:      joe@example.com

license:         BSD-3-Clause
license-file:    ./LICENSE
copyright:       2024 Kovalev Dmitry

build-type:      Simple

data-files:
  ./README.md
  ./assets/**/*.svg
  ./*.html

executable compiler
  default-language: GHC2021
  hs-source-dirs:   .
  ghc-options:      -Wall -O2 -threaded -rtsopts -main-is compiler
  main-is:          compiler.hs
  build-depends:
      base
    , hakyll
    , bytestring
    , filepath
    , time
